    `option scip_options 'limits/time 10 display/verblevel 1';`.
  String values should not be quoted and spaces in string values are not supported.

### Changed parameters

- Shrunk range of parameter "propagating/symmetry/sstleaderrule" from [0,3] to [0,2], removed "MAXCONFLICTS"-option.

### New parameters

- expr/pow/expandmaxexponent to specify limit on exponent when to expand power of sum
- expr/pow/distribfracexponent to enable expanding power of products with fractional exponents
- expr/product/expandalways to enable expanding any product with sums as factor (that is, also when more than two factors)
- nlhdlr/convex/maxperturb to specify maximal perturbation of non-differential reference points

### Data structures

Deleted files
-------------

- deleted the now unused files: tpi_none.h, tpi_openmp.h, tpi_tnycthrd.h, type_tpi_none.h, type_tpi_openmp.h, type_tpi_tnycthrd.h

Unit tests
----------

Testing
-------

Build system
------------

### Cmake

- New flag -DLAPACK=on for linking with Lapack (must be available in the system)

### Makefile

- New flag LAPACK for linking with Lapack (must be available in the system)

Fixed bugs
----------

Miscellaneous
-------------

- The TPI has been changed to become mostly independent from the actual parallel interface during compile time.
  For this, the locks and conditions are now pointers to abstract structs.

Known bugs
----------

@page RN80 Release notes for SCIP 8.0

@section RN000 SCIP 8.0.3
*************************

Features
--------

Performance improvements
------------------------

Examples and applications
-------------------------

Interface changes
-----------------

### New and changed callbacks

### Deleted and changed API methods

### New API functions

### Command line interface

### Interfaces to external software

### Changed parameters

### New parameters

### Data structures

Deleted files
-------------

Unit tests
----------

Testing
-------

Build system
------------

### Cmake
